# lf10-sprint4

./: .gitignore  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py  templates.py
app/routers/: components.py  events.py  web.py
app/schemas/: credit.py  events.py  session.py  user.py
app/scripts/: event_controller.py  frontend_utils.py  session_controller.py  utils.py
app/static/css/: global.css
app/static/js/: apiController.js  enums.js  eventController.js  notificationController.js  utils.js
app/templates/: base.j2  credit_request_base.j2  credit_request_stage1.j2  index.j2
app/templates/components/: buttons.j2  cards.j2  dataProvider.j2  data_provider.j2  inputs.j2  left_nav_menu.j2  status.j2
app/templates/online_form_stages/: credit_details_stage.j2  credit_format_stage.j2  data_provider_with_header.j2  employment_income_stage.j2  family_status_stage.j2  personal_data_stage.j2
app/test_data/: credits.py
